# ai-companion

./: .gitignore  .secrets.template  BUILD_COMPLETE_v0.4.0.md  INSTALL.md  MANIFEST.in  README.md  TODO.md  __init__.py  __version__.py  ai_companion.db  app.py  app_globals.py  chat_log.txt  check_and_clean_db.py  check_motions.py  cli.py  cli_dev.py  cli_server.py  cloudflare-setup.sh  config.yaml  debug_api_issue.py  debug_model_position.js  debug_motion_test.py  debug_tts.py  deploy_live2d_integration.sh  dev_install.py  dev_start.py  emergency_borders.js  enhanced_vad_example.py  fix_databases.py  init_databases.py  install.py  install_dev.py  install_live2d_models.py  migrate_to_separated_dbs.py  migration_report.py  package-lock.json  package.json  pixi_live2d_bridge_test.html  populate_all_motions.py  (+13 more)
api/: api_spec.py  api_spec_fixed.py  api_spec_old.py
archive/static_tests/: api_test.html  live2d_server.py  minimal_live2d_test.html
audio/: audio_utils.py  enhanced_audio_pipeline.py  enhanced_vad_fixed.py  voice_detection.py
config/: README.md  __init__.py  config.yaml  config_manager.py  config_template.yaml  production_config.py
databases/: avatar_framework.json  characters.json  conversations.db  database_manager.py  live2d.db  live2d_models_separated.py  system.db
databases/vector_db_test/: chroma.sqlite3
docs/: API_REFERENCE_v0.4.0.md  API_REFERENCE_v0.5.0a.md  ARCHITECTURE_SUMMARY.md  AUDIO_QUEUE_SYSTEM.md  AUTONOMOUS_AVATAR_SYSTEM_v0.5.0a.md  BUILD_COMPLETE_v0.4.0.md  CHAT_SYSTEM_SUMMARY_v0.5.0a.md  EMOTIONAL_TTS_INTEGRATION_REPORT.md  EMOTION_TO_LIVE2D_INTEGRATION_REPORT.md  ENHANCED_AUDIO_LIPSYNC_SUMMARY.md  ENHANCED_VAD_COMPLETION_REPORT.md  ENHANCED_VAD_README.md  ENHANCED_VAD_SUMMARY.md  FINAL_STATUS_v0.4.0.md  LLM_API_REFERENCE.md  LLM_INTEGRATION_GUIDE.md  LLM_PERFORMANCE_ANALYSIS.md  LLM_PERSONALITY_COMPLETION_REPORT.md  LLM_PERSONALITY_ENHANCEMENT_REPORT.md  LLM_STATUS_REPORT.md  MULTI_AVATAR_CHAT_INTEGRATION.md  RAG_SYSTEM_SUMMARY_v0.5.0a.md  SYSTEMD_SERVICE.md  TROUBLESHOOTING_ANALYSIS.md
live2d_models/: README.md
live2d_models/Rei/: 00_normal_01.motion3.json  E_angry.exp3.json  E_normal.exp3.json  E_sad.exp3.json  E_smile.exp3.json  cry_01.motion3.json  cry_01_E.motion3.json  happy_01.motion3.json  happy_01_E.motion3.json  idle_01.motion3.json  items_pinned_to_model.json  live2d_card_chara_000140002.moc3  live2d_card_chara_000140002.model3.json  live2d_card_chara_000140002.physics3.json  live2d_card_chara_000140002.vtube.json  performance_01.motion3.json  performance_01_E.motion3.json
live2d_models/haruka/: 06haruka_cloth001_3.0_f_t02.model3.json
live2d_models_packaged/: README.md  models_manifest.json
models/: autonomous_avatar_manager.py  enhanced_llm_handler.py  lightweight_emotional_tts.py  memory_system.py  personality.py  phoneme_detection.py  pyvts_integration.py  rag_system.py  tts_handler.py  tts_pyvts_integration.py
models/voices/: voice_config.json
routes/: app_routes_autonomous.py  app_routes_characters.py  app_routes_chat.py  app_routes_live2d.py  app_routes_logging.py  app_routes_rag.py  app_routes_system.py  app_routes_tts.py  app_routes_users.py  app_routes_users_fixed.py  app_routes_voices.py  socketio_handlers.py
scripts/: INSTALL_GUIDE.md  README.md  __init__.py  clean_css_duplicates.py  dev_install.py  find_css_duplicates.py  install.py  install_packaged_models.py  list_models.py  package_models_for_distribution.py  precise_css_cleanup.py  service-manager.sh  setup_live2d.py
scripts/debug/: debug_api_issue.py  debug_motion_test.py  verify_build.py  verify_port_change.sh
scripts/deployment/: ai_companion_main.py  cloudflare-setup.sh  complete_live2d_fix.py  deploy.sh  deploy_live2d_integration.sh.old  enhanced_vad_example.py  install-systemd-service.sh  run_app.py  service-manager.sh
scripts/migration/: check_and_clean_db.py  check_motions.py  clean_ai_companion_db.py  clear_database.py  migrate_config.py  migrate_preview_column.py  migrate_pyannote_models.py  migrate_to_separated_dbs.py  migration_report.py
scripts/setup/: build_pipx.sh  download_live2d_dependencies.sh  install_live2d_models.py  populate_all_motions.py  populate_correct_paths.py  populate_model_personalities.py  setup.py  setup.py.old
scripts/testing/: test_autonomous_system.py  test_avatar_emotions.py  test_caching_fix.py  test_config_only.py  test_embedded_llm_memory.py  test_enhanced_vad_minimal.py  test_full_download.py  test_llm_simple.py  test_local_git_models.py  test_model_downloads.py  test_production_service.py  test_silero.py  test_webapp.py  tests_README.md
src/: README.md  __init__.py  __version__.py  ai_companion.db  api_spec.py  api_spec_old.py  app.py  app_routes_audio.py  app_routes_chat.py  app_routes_debug.py  app_routes_live2d.py  app_routes_system.py  cli.py  main.py
src/api/: __init__.py
src/audio/: __init__.py  audio_pipeline.py  config_loader.py  enhanced_vad.py  enhanced_vad_fixed.py  model_registry.py  speech_to_text.py
src/config/: .secrets.template  config.yaml  config_manager.py  config_template.yaml  production_config.py
src/database/: __init__.py  database_manager.py  db_manager.py  live2d_models.py  live2d_models_separated.py  schemas.py
src/databases/: ai_companion.db  database_manager.py  live2d.db  live2d_models_separated.py  personality.db
src/live2d_models/: README.md
src/models/: enhanced_llm_handler.py  lightweight_emotional_tts.py  llm_handler.py  memory_system.py  personality.py  tts_handler.py
src/routes/: __init__.py  app_routes_live2d.py  app_routes_system.py  app_routes_tts.py
src/scripts/: install_command.py
src/utils/: model_downloader.py  (+2 more)
systemd/: ai-companion-full-problematic.service  ai-companion-minimal.service  ai-companion.service
tests/: README.md  test_avatar_emotions.py  test_chat.py  test_direct_enhanced_vad.py  test_embedded_llm_memory.py  test_enhanced_pipeline.py  test_enhanced_vad.py  test_llm_simple.py  test_quick_cache.py  test_var_and_diarization.py
utils/: dependency_manager.py  live2d_model_installer.py  model_downloader.py  system_detector.py
(+134 files in other folders)
